# AudioEngineV2

./: .gitignore  CMakeLists.txt  README.md
include/AudioEngineV2/: AudioEngine_C.h  AudioMgr.hpp  Types.hpp
src/: AudioEngine_C.cpp
src/AudioHw/: AudioHw.cpp  AudioHw.hpp
src/AudioMgr/: AudioMgr.cpp
src/CodecDetect/: CodecDetect.cpp  CodecDetect.hpp
src/Decoders/: DecoderAdpcm.cpp  DecoderAdpcm.hpp  DecoderAlaw.cpp  DecoderAlaw.hpp  DecoderBase.hpp  DecoderMp3.cpp  DecoderMp3.hpp  DecoderUlaw.cpp  DecoderUlaw.hpp  DecoderWavPcm.cpp  DecoderWavPcm.hpp  minimp3_impl.c
src/FsAdapter/: FsAdapter.cpp  FsAdapter.hpp
src/Mp3Duration/: Mp3Duration.cpp  Mp3Duration.hpp
src/Resampler/: Resampler.cpp  Resampler.hpp
